# cellular_automata_viz_backend

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  conanfile.py  conanfile.txt
proto/: server.proto  sim_server.proto
src/: README.md  bit_packed_grid_3d.cpp  bit_packed_grid_3d.hpp  entropy_tracker.cpp  entropy_tracker.hpp  main  main.cpp  old_main.txt  random_bitset.cpp  random_bitset.hpp  server.cpp  server.hpp  world_state.cpp  world_state.hpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
tests/: world_state.cpp
